[gd_scene load_steps=4 format=3 uid="uid://b8t1jt4a42fs8"]

[ext_resource type="Script" path="res://Attacks/simpleProjectile.gd" id="1_tnb76"]
[ext_resource type="PackedScene" uid="uid://ddhpvif8ronsj" path="res://Utlity/hitbox.tscn" id="2_iujys"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u3rmk"]
radius = 6.0
height = 36.0

[node name="simpleProjectile" type="Node2D"]
script = ExtResource("1_tnb76")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="flightTimer" type="Timer" parent="."]

[node name="HitBox" parent="." instance=ExtResource("2_iujys")]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("CapsuleShape2D_u3rmk")

[connection signal="timeout" from="flightTimer" to="." method="_on_flight_timer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]

[editable path="HitBox"]
